--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src=".√img/token1.png" alt="Description of image" width="300" height="200">
+            <img src="./img/token1.png" alt="Description of image">
 
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
