--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
         <div class="col">
           <div class="card shadow-sm">
             <img src="./img/token1.png" alt="Description of image">
+            <img src="./img/1.png" alt="Description of image">
+            <img src="./img/2.png" alt="Description of image">
 
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
