--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             <img src="./img/token1.png" alt="Description of image">
             <img src="./img/1.png" alt="Description of image">
             <img src="./img/2.png" alt="Description of image">
+            <img src="./img/whoami_token.png" alt="Description of image">
 
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
